<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/amarillo"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".IngresoActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/HeaderIngreso"
        android:background="@color/appreparto2"
        android:padding="8.0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:textSize="18.0sp"
            android:textColor="#ffffffff"
            android:layout_gravity="center"
            android:id="@+id/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demotext" />

    </LinearLayout>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:contentDescription="@string/dsclogo"
        android:maxWidth="100dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="false"
        android:layout_above="@+id/FormIngreso"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/FormIngreso"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/LinearLayoutUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/letra"
                android:layout_gravity="center"
                android:id="@+id/editTextUsuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_usuario"
                android:ems="15"
                android:inputType="text"
                android:theme="@style/Theme.App.Edittext" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/LinearLayoutContrasena"
            android:paddingTop="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/letra"
                android:layout_gravity="center"
                android:id="@+id/editTextPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_contrasena"
                android:ems="15"
                android:inputType="textWebPassword"
                android:backgroundTint="@color/appreparto4"
                android:theme="@style/Theme.App.Edittext"/>

        </LinearLayout>

        <Button
            android:textColor="@color/blanco"
            android:layout_gravity="center"
            android:id="@+id/buttonIngresar"
            android:layout_width="fill_parent"
            android:background="@drawable/btn_redondeado"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/label_Ingresar"
            android:onClick="validarLogin" />

    </LinearLayout>

    <ImageView
        android:id="@+id/Logo2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="410dp"
        android:contentDescription="@string/dsclogo"
        android:maxWidth="100dp"
        android:src="@drawable/logotipo"


        android:layout_marginBottom="00dp" />


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/Footer"
        android:background="@color/grey_400"
        android:padding="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true">

        <TextView android:textSize="18.0sp"
            android:textColor="#ffffffff"
            android:layout_gravity="center"
            android:id="@+id/TextFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_footer" />

    </LinearLayout>



</RelativeLayout>
